# slitscan-cli

./: .gitignore  README.md  pyproject.toml  slitscan-build-plan.md  slitscan-spec.md  slitscan-studio-macos-spec.md
examples/: make_source_clip.py
examples/grid/: README.md
slitscan/: __init__.py  cli.py  meta.py
slitscan-studio/: Package.swift  README.md
slitscan-studio/Sources/SlitscanCore/: Profiles.swift  SurfaceParams.swift
slitscan-studio/Sources/SlitscanStudio/: AppState.swift  Cube.swift  Exporter.swift  GatherRenderer.swift  GatherUniforms.swift  MetalView.swift  SelfTest.swift  Session.swift  ShaderSource.swift  SlitscanStudioApp.swift  VideoIngest.swift
slitscan-studio/Sources/SlitscanStudio/Views/: ContentView.swift  FilmstripView.swift  InspectorView.swift  Theme.swift
slitscan-studio/Tests/SlitscanCoreTests/: ProfileParityTests.swift
slitscan-studio/reference/: generate_vectors.py
slitscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
slitscan/buffer/: __init__.py  base.py  full.py  ring.py
slitscan/engine/: __init__.py  collapse.py  fill.py  gather.py  grid.py  render.py
slitscan/io/: __init__.py  decode.py  encode.py  normalize.py
slitscan/modulation/: __init__.py  oscillators.py  patch.py  rates.py  resolve.py
slitscan/profiles/: __init__.py  base.py  ramp.py  reverse.py  tent.py
tests/: test_collapse.py  test_fill.py  test_gather.py  test_grid.py  test_interpolation.py  test_modulation.py  test_profiles.py  test_ring_buffer.py
(+1 files in other folders)
