[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slitscan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "av",
    "numpy",
    "typer",
    "pyyaml",
    "pillow",
]

[project.scripts]
slitscan = "slitscan.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["slitscan*"]
